--- a/package.json
+++ b/package.json
@@ -1,27 +1,16 @@
 {
-  "name": "testing-js",
-  "version": "1.0.0",
-  "description": "Test project",
+  "name": "testing-client",
+  "version": "0.1.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node test.js && zuul --ui tape --local 9966 -- test.js"
-	"ci": "node test.js"
+    "test": "node test.js && zuul --local 9966 -- test.js",
+    "ci": "node test.js && zuul -- test.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/martinavagyan/testing-js.git"
-  },
-  "author": "Martin",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/martinavagyan/testing-js/issues"
-  },
-  "homepage": "https://github.com/martinavagyan/testing-js#readme",
-  "dependencies": {
-    "webpack": "^2.5.1"
-  },
+  "author": "Example",
+  "license": "MIT",
   "devDependencies": {
-    "tape": "^4.6.3",
-    "zuul": "^3.11.1"
+    "tape": "^4.0.0",
+    "zuul": "^3.1.0"
   }
 }
