--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: node_js
 node_js:
-	_ 'node'
+	- '0.10'
 	
 script: npm run ci
 
 notifications:
-  email: false
+  email:
+    on_success: never
+    on_failure: never
