--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testing-client",
+  "name": "testing-client-server-javascript",
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
@@ -7,7 +7,7 @@
     "test": "node test.js && zuul --local 9966 -- test.js",
     "ci": "node test.js && zuul -- test.js"
   },
-  "author": "Example",
+  "author": "Avag",
   "license": "MIT",
   "devDependencies": {
     "tape": "^4.0.0",
