--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "node test.js && zuul --local 9966 -- test.js",
-    "ci": "node test.js && zuul -- test.js"
+    "ci": "node test.js"
   },
   "author": "NA",
   "license": "MIT",
