--- a/package.json
+++ b/package.json
@@ -4,13 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node test.js && zuul --local 9966 -- test.js",
+    "test": "node test/test.js",
+    "validate": "babel-tape-runner test/test.js",
     "ci": "node test.js"
   },
   "author": "NA",
   "license": "MIT",
   "devDependencies": {
-    "tape": "^4.0.0",
+    "babel-core": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-tape-runner": "^2.0.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "tape": "^4.6.3",
+    "webpack": "^2.5.1",
     "zuul": "^3.1.0"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.23.0"
   }
 }
